# dub_manga_studio

./: .env.production.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  HOW_TO_USE_IT.md  INSTALL.md  README.md  RELEASE_NOTES_1.0.0.md  TROUBLESHOOTING.md  app.py  config.yaml  docker-compose.prod.yml  docker-compose.test.yml  hf_token.txt.example  provider_keys.json.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  paths.py
docker/: Dockerfile.api  Dockerfile.mock-worker  Dockerfile.worker-base  Dockerfile.worker-indicf5  Dockerfile.worker-voxcpm2  Dockerfile.worker-voxcpm2-l4
docs/: PRODUCTION.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts  queryClient.ts
frontend/src/components/: EmptyState.tsx  Loading.tsx  MetricCard.tsx  PageHeader.tsx  StatusBadge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/hooks/: useEvents.test.tsx  useEvents.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/AudioPreview/: index.tsx
frontend/src/pages/Dashboard/: Dashboard.test.tsx  index.tsx
frontend/src/pages/ExportCenter/: index.tsx
frontend/src/pages/Models/: index.tsx
frontend/src/pages/Projects/: Projects.test.tsx  index.tsx
frontend/src/pages/Providers/: index.tsx
frontend/src/pages/Settings/: index.tsx
frontend/src/pages/SystemHealth/: index.tsx
frontend/src/pages/TTSQueue/: index.tsx
frontend/src/pages/Translation/: index.tsx
frontend/src/pages/Uploads/: Uploads.test.tsx  index.tsx
frontend/src/pages/VoiceStudio/: index.tsx
frontend/src/pages/Workers/: index.tsx
frontend/src/pages/Workflow/: Workflow.test.tsx  index.tsx
frontend/src/store/: uiStore.test.ts  uiStore.ts
frontend/src/test/: render.tsx  setup.ts
frontend/src/types/: api.ts
plugins/: __init__.py
scripts/: _common.sh  benchmark_tts.py  bootstrap.sh  bootstrap_lightning.sh  check_environment.py  health_check.py  install_model_chatterbox.sh  install_model_fish.sh  install_model_indicf5.sh  install_model_qwen3tts.sh  install_model_vibevoice.sh  install_model_voxcpm2.sh  install_model_whisper.sh  make_reference_voice.py  selftest_models.py  whisper_worker.py
services/storage_manager/: __init__.py  filesystem.py  init.py  postgres.py  redis.py  s3.py
src/chatterbox_manga_studio/: __init__.py
src/chatterbox_manga_studio/adapt/: batch_manager.py  emotions.py  glossary.py  intro_outro.py  prompts.py  providers.py  quality.py
src/chatterbox_manga_studio/api/: __init__.py  app.py  auth.py  dependencies.py  lifecycle.py  middleware.py  schemas.py  security.py  state.py
src/chatterbox_manga_studio/api/routers/: artifacts.py  jobs.py  models.py  pipeline.py  projects.py  providers.py  system.py  uploads.py  workers.py
src/chatterbox_manga_studio/api/websocket/: manager.py  routes.py
src/chatterbox_manga_studio/common/: config.py  diskmanager.py  hf_token.py  keepalive.py  keys.py  logging_util.py  paths.py  stageflow.py  sysmon.py  textutil.py  voicecheck.py
src/chatterbox_manga_studio/directaudio/: direct.py  voices.py
src/chatterbox_manga_studio/dubbing/: auto_pipeline.py  cleanup.py  installer.py  live_render.py  package.py  router.py  vram_manager.py
src/chatterbox_manga_studio/dubbing/workers/: base_worker.py  protocol.py  (+6 more)
src/chatterbox_manga_studio/export/: bgm.py  exporter.py  metadata.py  srt.py  subtitle_mask.py  timeline.py
src/chatterbox_manga_studio/ingest/: upload.py
src/chatterbox_manga_studio/services/: __init__.py  events.py  gpu_scheduler.py  job_scheduler.py  model_manager.py  observability.py  plugin_registry.py  plugin_runtime.py  provider_manager.py  worker_pool.py  worker_runtime.py  workflow_engine.py
src/chatterbox_manga_studio/transcribe/: whisper_engine.py
src/chatterbox_manga_studio/ui/: helpers.py  tabs.py
tests/: test_core.py
tests/integration/api/: test_api_websocket.py  test_phase6_application_integration.py
tests/integration/services/: test_phase1_core_services.py  test_phase2_worker_infrastructure.py  test_phase3_pipeline_workflow.py
tests/unit/api/: test_api_platform.py  test_artifacts_download.py  test_production_readiness.py
tests/unit/services/: test_base_worker_phase2.py  test_event_bus.py  test_gpu_scheduler.py  test_job_scheduler.py  test_model_manager_and_plugins.py  test_pipeline_nodes.py  test_plugin_runtime.py  test_provider_manager.py  test_storage_manager_phase1.py  test_worker_pool.py  test_worker_runtime.py  test_workflow_engine.py
tests/unit/storage/: test_storage_manager.py
workers/: mock_worker.py
(+11 files in other folders)
