[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatterbox-manga-studio"
version = "2.0.0"
description = "Lightning-native manga dubbing workflow engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chatterbox Manga Studio Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "soundfile>=0.12.1",
    "numpy>=1.26,<2.1",
    "gradio>=4.44,<6",
    "gdown>=5.2.0",
    "huggingface-hub>=0.24",
    "urllib3>=2.0",
    "aiohttp>=3.9",
    "redis>=5.0",
    "asyncpg>=0.28",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "tenacity>=8.2",
    "orjson>=3.9",
    "python-multipart>=0.0.6",
    "python-magic>=0.4.27",
    "ffmpeg-python>=0.2.0",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-httpx>=0.27",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4.0",
    "black>=24.3",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
    "ipython>=8.20",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-httpx>=0.27",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "testcontainers>=3.8",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/yourusername/chatterbox-manga-studio"
Repository = "https://github.com/yourusername/chatterbox-manga-studio"
Issues = "https://github.com/yourusername/chatterbox-manga-studio/issues"
Documentation = "https://yourusername.github.io/chatterbox-manga-studio/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chatterbox_manga_studio*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-httpx>=0.27",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "ruff>=0.4.0",
    "black>=24.3",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
    "ipython>=8.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "PTH",
    "T20",
]
ignore = [
    "E501",
    "B008",
    "T201",
]
# per-file-ignores as a regular table, not inline
[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106"]
"scripts/*" = ["T201", "S603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  \.venv
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.ruff_cache
  | build
  | dist
  | node_modules
)
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
enable_error_code = ["ignore-without-action"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gradio.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --strict-config"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require external services)",
    "slow: Slow tests",
    "gpu: Tests requiring GPU",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pytest-asyncio]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pytest-timeout]
timeout = 300
method = "thread"

[tool.pre-commit-hooks]
# See .pre-commit-config.yaml for actual hooks
